# amber

./: .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  Dockerfile  Dockerfile.codon  README.md  build.py  convet.yaml  docker-bake.hcl  index.html  mkdocs.yml  pyproject.toml  run_gtests.py  sitemap.xml
.github/: codecov.yml
.github/workflows/: document.yaml  publish.yaml  pytest.yaml
.github/workflows/actions/cleanup_runner/: action.yaml
amber/: cli.py  exception.py
amber/apps/: blip2_image_search.py  image_search.py
amber/automation/: annotation.py  automation.py  blip2_encoder.py  clip.py  clip_encoder.py  clip_image_annotation_filter.py  colmap_pose_estimation.py  detic_image_labeler.py  nerf_3d_reconstruction.py  sentence_transformer.py  task_description.py
amber/dataset/: conversion.py  dataset_task_description.py  images_and_annotations_dataset.py  images_and_bounding_box_dataset.py  images_dataset.py  pointcloud_dataset.py  rosbag2_dataset.py  schema.py  tf_dataset.py  topic_config.py
amber/dataset/schema/: schema.py  sensor_msgs.py  std_msgs.py
amber/exporter/: video.py
amber/importer/: tf.py  video.py
amber/sampler/: timestamp_sampler.py
amber/search/: blip2_image_search.py
amber/tf2/geometry2/tf2/src/: pybind.cpp  time.cpp
amber/tf2/geometry2/tf2/test/: simple_tf2_core.cpp
amber/tf2/geometry2/tf2_py/src/: tf2_py.cpp
amber/tf2/messages/: geometry_msgs.cpp  ros2_compatible_messages.cpp
amber/tf2/messages/builtin_interfaces/msg/: time.hpp
amber/tf2/messages/geometry_msgs/msg/: quaternion.hpp  transform.hpp  transform_stamped.hpp  vector3.hpp
amber/tf2/messages/std_msgs/msg/: header.hpp
amber/util/imagenet_21k/: in21k_categories.py
amber/visualization/: clip_embeddings_visualization.py
amber_mcap/: cli.py  exception.py
amber_mcap/apps/: image_search.py
amber_mcap/automation/: annotation.py  automation.py  blip2_encoder.py  clip_encoder.py  clip_image_annotation_filter.py  detic_image_labeler.py  nerf_3d_reconstruction.py  task_description.py
amber_mcap/automation/onnx/: .gitignore
amber_mcap/dataset/: conversion.py  geometry.py  images_and_annotations_dataset.py  images_dataset.py  pointcloud_dataset.py  rosbag2_dataset.py  tf_dataset.py  topic_config.py
amber_mcap/importer/: tf.py  video.py
amber_mcap/tf2/console_bridge/include/console_bridge/: console.h
amber_mcap/tf2/console_bridge/src/: console.cpp
amber_mcap/tf2/geometry2/tf2/src/: buffer_core.cpp  cache.cpp  static_cache.cpp
amber_mcap/tf2/geometry2/tf2/test/: cache_unittest.cpp  static_cache_test.cpp  test_time.cpp
amber_mcap/tf2/messages/builtin_interfaces/msg/: time.hpp
amber_mcap/unit/: time.py
amber_mcap/util/: color.py  geometry.py
amber_mcap/visualization/: clip_embeddings_visualization.py
automation/automation/: index.html
automation/cli/: index.html
automation/clip_image_annotation_filter/: index.html
automation/detic_image_labaler/: index.html
automation/nerf_3d_reconstruction/: index.html
docs/: index.md  tips.md
docs/automation/: automation.md  cli.md  clip_image_annotation_filter.md  detic_image_labaler.md  nerf_3d_reconstruction.md
docs/import/: import.md  tf.md  video.md
docs/sample_applications/: image_search.md  sample_applications.md
docs/use_rosbag_as_dataset/: how_to_use.md  read_images.md  read_images_and_annotations.md  read_pointclouds.md  read_tf.md  timestamp_sampler.md
docs/use_rosbag_as_dataset/task_description/: read_images.md
docs/visualize/: clip_image_embedding.md  visualize.md
import/import/: index.html
import/tf/: index.html
import/video/: index.html
rosbag2_pytorch_data_loader/: _hello.cxx  conversion.py  exception.py  rosbag2_pytorch_dataset.py  task_description.py
rosbag2_pytorch_data_loader/automation/: automation.py  clip_image_filter.py  detec_auto_labeler.py  detic_image_labeler.py  filter_images_by_object.py  task_description.py
rosbag2_pytorch_data_loader/automation/config/detic/: Base-C2_L_R5021k_640b64_4x.yaml  Detic_LCOCOI21k_CLIP_SwinB_896b32_4x_ft4x_max-size.yaml
rosbag2_pytorch_data_loader/automation/datasets/detic/: README.md
rosbag2_pytorch_data_loader/automation/docker/detic/: Dockerfile
rosbag2_pytorch_data_loader/console_bridge/include/console_bridge/: console.h
rosbag2_pytorch_data_loader/dataset/: conversion.py  rosbag2_pytorch_dataset.py
rosbag2_pytorch_data_loader/geometry2/tf2/src/: time.cpp
rosbag2_pytorch_data_loader/messages/builtin_interfaces/msg/: time.hpp
rosbag2_pytorch_data_loader/messages/geometry_msgs/msg/: transform.hpp
rosbag2_pytorch_data_loader/proto/: annotation.proto
sample_applications/image_search/: index.html
sample_applications/sample_applications/: index.html
search/: search_index.json
tests/: clip_image_filter.yaml  colmap_pose_estimation.yaml  detic_image_labeler.yaml  read_image.yaml  read_image_vrx.yaml  read_images_soccer_goal.yaml  test_algorithm.py  test_automation.py  test_dataset.py  test_import.py  test_read_image.py  test_sampler.py  test_unit.py  test_visualization.py  video_importer.yaml
tests/automation/: clip_image_annotation_filter.yaml  clip_image_annotation_filter_with_lvis.yaml  detic_image_labeler.yaml  nerf_3d_reconstruction.yaml
tests/rosbag/: metadata.yaml  vrx.mcap
tests/rosbag/ford/: read_image.yaml  read_tf.yaml
tests/rosbag/ford_with_annotation/: read_images_and_bounding_box.yaml
tests/rosbag/soccer_goal/: metadata.yaml  soccer_goal_12.mcap
tests/rosbag/vrx/: .gitignore  read_image.yaml  read_pointcloud.yaml
tests/tf/: read_tf.yaml
tests/visualization/: clip_image_visualization.yaml
tips/: index.html
use_rosbag_as_dataset/how_to_use/: index.html
use_rosbag_as_dataset/read_images/: index.html
use_rosbag_as_dataset/read_images_and_annotations/: index.html
use_rosbag_as_dataset/read_pointclouds/: index.html
use_rosbag_as_dataset/read_tf/: index.html
use_rosbag_as_dataset/task_description/read_images/: index.html
use_rosbag_as_dataset/timestamp_sampler/: index.html
visualize/clip_image_embedding/: index.html
visualize/visualize/: index.html
(+35 files in other folders)
