[tool.poetry]
name = "amber"
version = "0.0.1"
description = "Annotation and Multimodal Bag Extraction for Robotics"
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
license = "Apache 2.0"

include = [
    # Source files for C extensions must be included in the source distribution.
    { path = "CMakeLists.txt", format = "sdist" },
    { path = "amber/**/*.cpp", format = "sdist" },
    # C extensions must be included in the wheel distribution.
    { path = "amber/**/*.pyd", format = "wheel" },
    { path = "amber/**/*.so", format = "wheel" },
]
exclude = [
    "amber/**/*.cpp",
    "amber/**/*.pyd",
    "amber/**/*.so",
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.0"
mcap-ros2-support= "^0.3.0"
Pillow = "^9.5.0"
pyzstd = "^0.15.7"
numpy = "^1.24.0"
dataclass-wizard = "^0.22.2"
ftfy = "^6.1.1"
regex = "^2023.3.23"

gradio_client = "^0.2.5"
docker = "^6.1.2"
opencv-python = "^4.7.0.72"
pyparsing = "*"
boto3 = "^1.20.0"
urllib3 = "^1.26.0"
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "torch_cu118"}
open3d = "^0.17.0"
scikit-learn = "^1.3.0"
threadpoolctl = "^3.2.0"
addict = "^2.4.0"
pandas = "^2.0.3"
onnxruntime-gpu = "^1.15.1"
download = "^0.3.5"
clip = {git = "https://github.com/openai/CLIP.git", branch="main"}
tensorboardx = "^2.6.2.2"
sentence-transformers = "^2.2.2"
tensorboard = "^2.14.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
cmake = "^3.22.5"
scikit-build = "^0.15.0"
taskipy = "^1.10.2"
pre-commit = "^2.17.0"  # 2.18.0 blocked by pytohn 3.6.1
pytest = "^7.0.1"  # 7.1.0 blocked by pytohn 3.6.1
lark = "^1.1.5"
coverage = "^7.2.7"
pytest-cov = "^3.0.0"
black = "^23.3.0"
pip = "^23.1.2"
click = "8.0.4"
python = "^3.10"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4"
mkdocs-material = "^9.1"
fontawesome_markdown = "*"
markdown = "3.3.0"
mkdocs-mermaid2-plugin = "^1.0.0"
pymdown-extensions = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-gitsnippet-plugin = "*"

[tool.poetry.scripts]
amber = "amber.cli:main"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0", "scikit-build", "cmake", "ninja"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.html]
directory = "_htmlcov"

[tool.coverage.xml]
output = "_htmlcov/coverage.xml"

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError()",
    "return NotImplemented",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203", # for black
]

[tool.isort]
profile = "black"

[tool.mypy]
pretty = true
show_error_codes = true
strict = true

[tool.pytest.ini_options]
addopts = [
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term",
    "--cov=amber",
    "--doctest-modules",
    "--ignore=_skbuild",
    "--ignore=build.py",
    "--import-mode=importlib",
]
testpaths = ["tests",]

[tool.taskipy.tasks]
prepare.cmd = "pre-commit install && pre-commit install --hook-type commit-msg"
prepare.help = "sets up a development environment"

lint.cmd = "pre-commit run --all-files"
lint.help = "runs linters (+ fix)"

test.cmd  = "python run_gtests.py && pytest"
test.help = "runs tests"
